@@ -142,6 +142,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18020: improve html.escape speed by an order of magnitude.
+  Patch by Matt Bryant.
+
 - Issue #18347: ElementTree's html serializer now preserves the case of
   closing tags.
 
